--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,9 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@import url(_footer.scss);
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+.spacer {
+  margin-bottom: 100px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
+/*# sourceMappingURL=globals.css.map */
